@@ -10,13 +10,13 @@
 SCRIPTDIR=${SCRIPTDIR:-@SCRIPTDIR@}
 
 # Load the basic configuration.
-. "${SCRIPTDIR}/common/config.bash"
-. "${SCRIPTDIR}/common/functions.bash"
+. "${SCRIPTDIR}/common/config.bash" || exit 1
+. "${SCRIPTDIR}/common/functions.bash" || exit 1
 
 # We make use of egetent. 
-. "${SCRIPTDIR}/common/getent.bash"
+. "${SCRIPTDIR}/common/getent.bash" || exit 1
 # Reads the proper data file for the desired group
-. "${SCRIPTDIR}/common/read_groupdata.bash"
+. "${SCRIPTDIR}/common/read_groupdata.bash" || exit 1
 
 main() {
 	# Read the command line arguments.
@@ -90,7 +90,8 @@ main() {
 		then
 			echo "Running ${x}-${userspace}-group${action}..."
 			. "${SCRIPTDIR}/auth/${x}-${userspace}-group${action}.bash"
-			"${x}-${userspace}-group${action}" "${groupid}"
+			"${x}-${userspace}-group${action}" "${groupid}" \
+				|| die "group${action} failed"
 		else
 			echo -n "Auth backend ${x} with " >&2
 			echo -n "userspace ${userspace} " >&2
